# AlphaDL

./: .gitignore  README.md  main.py  requirements.txt  requirements_without_versions.txt  visualization.ipynb
agents/: analyze_stocks_variations.py  create_train_beta.py  finance_llm.py  fmp_news_api.py  news_analyzer.py  pytorch_forecasting_stepbystep.ipynb  study.ipynb
agents/candidate_news_tracker/: .gitignore  README.md  company_sentiment_analyzer.py  entity_endorsement_analyzer.py  pyproject.toml  run_analysis.py
agents/candidate_news_tracker/src/candidate_news_tracker/: crew.py  main.py
agents/candidate_news_tracker/src/candidate_news_tracker/config/: agents.yaml  tasks.yaml
agents/candidate_news_tracker/src/candidate_news_tracker/tools/: fmp_news.py
alphadl/models/: stock_mixer.py
configs/: config.yaml  eval.yaml  train.yaml
configs/data/: data.yaml  japan_daily.yaml  us_daily.yaml  us_minute.yaml
configs/experiment/: lstm_aapl_nov.yaml  lstm_appl_nov.yaml  lstm_us_1m.yaml  stock_mixer_sp500_1d.yaml  stockmixer_nasdaq_1m.yaml  stockmixer_sp500_1d.yaml
configs/logger/: many_loggers.yaml  wandb.yaml
configs/model/: lstm.yaml  stock_mixer.yaml  stockmixer.yaml
configs/openbb/: settings.yaml
configs/providers/: default.yaml  fmp.yaml
configs/trainer/: default.yaml
notebooks/: pyforecasting.ipynb  pytorch_forecasting_tutorial.ipynb  study.ipynb
scripts/: train.py
src/: eval.py  eval_.py  main.py  train.py  train_.py
src/data/: debug_openbb.py  openbb_datamodule.py  openbb_dataset.py  stocks_datamodule.py
tests/: test_openbb_dataset.py
(+49 files in other folders)
