[project]
name = "candidate_news_tracker"
version = "0.1.0"
description = "candidate_news_tracker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
candidate_news_tracker = "candidate_news_tracker.main:run"
run_crew = "candidate_news_tracker.main:run"
train = "candidate_news_tracker.main:train"
replay = "candidate_news_tracker.main:replay"
test = "candidate_news_tracker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
